--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ body {
 
 @media only screen and (min-width: 1200px)   {
     .grid {
-        grid-gap: 20px;
+        /*grid-gap: 20px;*/
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
                 "header  header"
